--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "website as share platform, drawing, board etc.",
   "main": "main.js",
   "scripts": {
+    "start": "node ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,11 @@
   },
   "homepage": "https://github.com/ChangRaeJoe/drawing#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mysql": "^2.17.1",
     "pbkdf2-password": "^1.2.1"
   }
