--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "website as share platform, drawing, board etc.",
   "main": "main.js",
   "scripts": {
-    "start": "node ./bin/www.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "export NODE_ENV=development||set NODE_ENV=development&&node ./bin/www.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "production": "export NODE_ENV=production||set NODE_ENV=production&&node ./bin/www.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,11 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "http-errors": "^1.7.3",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
-    "pbkdf2-password": "^1.2.1"
-  }
+    "pbkdf2-password": "^1.2.1",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {}
 }
