--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "connect-redis": "^4.0.4",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "http-errors": "^1.7.3",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pbkdf2-password": "^1.2.1",
+    "redis": "^3.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {}
