--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "express-session": "^1.17.0",
     "http-errors": "^1.7.3",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pbkdf2-password": "^1.2.1",
